# mac-speech-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  Package.swift  README.md  Speech.entitlements  pyproject.toml
.github/workflows/: release.yml
src/macspeechanalyzer/: __init__.py  main.py
swift/: bridge.swift  core.swift
